# floatboat

./: MANIFEST.inc  README.adoc  README.asciidoc  README.md  README.rst  crackshell  crackshell.utildef
src/: crshell-interpenter.cpp
src/kernel-haviar/ix86-scpio/: little_endian_x86.rs  little_endian_x86_serialk.rs  non-float-bytesection-i86.rs
src/kernel-haviar/rs-utils-def/: Cargo.toml  format.rs  hfs.rs  kdv.rs  permission_manager.rs  runner.rs  serialk-watcher.rs  serialk.rs  serialk_watcher.rs  serialkiller.rs
src/kernel-haviar/rs-utils-def/library-pself-universal/: pself-format.dart
src/kernel-haviar/universal-dart-src/: pself-exec-hfs.dart  pself-exec-kdv.dart  pself-runner.dart
