[package]
name = "rs-utils-def"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "serialkiller-rs-stable"
path = "serialkiller.rs"

[dependencies]
tensorflow = "0.21.0"
clap = { version = "4", features = ["derive"] }
notify = "6"
git2 = "0.18"
log = "0.4"
env_logger = "0.10"

# serial-k utils-define
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
regex = "1"
hex = "0.4"   
